Comienzo del home

--- a/scss/_colorInput.scss
+++ b/scss/_colorInput.scss
@@ -1,4 +1,4 @@
-$color-input: $color_azul_oscuro;
+$color-input: $color_dorado;
 
 textarea:focus, textarea[type]:focus, input:focus, input[type]:focus{
     border-color: $color-input !important;
