--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,8 @@
 //
 
 
-$color_azul :#002230 ;
-$color_azul_oscuro: #0057A1;
+$color_azul_oscuro :#002230 ;
+$color_azul: #0057A1;
 $color_dorado: #B58D10;
 
 // Variables should follow the `$component-state-property-size` formula for
