--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -7714,40 +7715,114 @@ p, span, b {
   background-color: white;
   color: #0057A1; }
 
-#destacadas .precio_inmueble {
-  position: absolute;
-  top: 214px;
-  font-size: 9px;
-  color: #ffffff;
-  text-align: center;
-  letter-spacing: 1.5px;
-  background-color: rgba(181, 141, 16, 0.66);
-  padding: 16px 45px 11px 45px;
-  margin-left: 0%; }
-#destacadas .gestion_inmueble {
-  position: absolute;
-  top: 0px;
-  font-size: 9px;
-  color: #ffffff;
-  text-align: center;
-  letter-spacing: 1.5px;
-  background-color: rgba(181, 141, 16, 0.66);
-  padding: 12px 41px 11px 45px;
-  margin-left: 39%; }
-#destacadas .info_inmueble {
+#destacadas {
+  margin-top: 7.5rem !important; }
+  #destacadas .precio_inmueble {
+    position: absolute;
+    top: 221px;
+    font-size: 9px;
+    color: #ffffff;
+    text-align: center;
+    letter-spacing: 1.5px;
+    background-color: rgba(181, 141, 16, 0.66);
+    padding: 16px 45px 11px 45px;
+    margin-left: 0%; }
+  #destacadas .gestion_inmueble {
+    position: absolute;
+    top: 0px;
+    font-size: 9px;
+    color: #ffffff;
+    text-align: center;
+    letter-spacing: 1.5px;
+    background-color: rgba(181, 141, 16, 0.66);
+    padding: 12px 41px 11px 45px;
+    margin-left: 40%; }
+  #destacadas .info_inmueble {
+    display: flex;
+    list-style: none;
+    margin-left: -6%;
+    margin-right: -10%; }
+  #destacadas .container_li {
+    margin-right: 1.5em; }
+  #destacadas .color_linea_divisora_Card {
+    border-top: 1px solid #eeeeee; }
+  #destacadas .card-body {
+    background-color: #002230; }
+  #destacadas .dorado {
+    color: #B58D10; }
+  #destacadas .color_palabras {
+    color: white; }
+
+.swiper-container {
+  width: 100%;
+  height: 100%; }
+
+.swiper-slide {
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  list-style: none;
-  margin-left: -6%;
-  margin-right: -10%; }
-#destacadas .container_li {
-  margin-right: 1.5em; }
-#destacadas .color_linea_divisora_Card {
-  border-top: 1px solid rgba(0, 34, 48, 0.65); }
-#destacadas .card-body {
-  background-color: #002230; }
-#destacadas .dorado {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center; }
+
+.tamaño_swiper_card {
+  width: 369px;
+  margin-right: 0px; }
+
+.swiper-pagination-bullet-active {
+  background: #002230; }
+
+.boton_cards {
+  border-color: #B58D10;
+  background-color: #002230;
   color: #B58D10; }
-#destacadas .color_palabras {
+
+.boton_cards:hover {
+  background-color: #B58D10;
   color: white; }
+
+.contenedor_bot_card {
+  margin-left: 43%;
+  margin-top: -8%; }
+
+.letra_gruesa {
+  color: #002230;
+  font-size: 48px;
+  font-weight: bold; }
+
+.main-title::before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 23%;
+  bottom: 79px;
+  background-color: #c8ae5c;
+  margin: auto; }
+
+.main-title_destacadas::before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 30%;
+  background-color: #c8ae5c;
+  margin: auto;
+  margin-top: 33%; }
+
+#servicios .cont_servi {
+  padding: 6%; }
+#servicios .cont_icono {
+  font-size: 226%;
+  padding: 9%; }
+#servicios .cont_arrendamiento {
+  margin: 17px; }
+#servicios .cont_ventas {
+  margin: 3%; }
 
 /*# sourceMappingURL=style.css.map */
