--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -115,9 +115,10 @@ p, span, b {
     color: $color_azul;
 }
 #destacadas{
+    margin-top: 7.5rem !important;
     .precio_inmueble{
     position: absolute;
-    top: 214px;
+    top: 221px;
     font-size: 9px;
     color: #ffffff;
     text-align: center;
@@ -135,7 +136,7 @@ p, span, b {
         letter-spacing: 1.5px;
         background-color: rgba(181, 141, 16, 0.66);
         padding: 12px 41px 11px 45px;
-        margin-left: 39%;
+        margin-left: 40%;
     }
     .info_inmueble{
         display: flex;
@@ -147,7 +148,7 @@ p, span, b {
         margin-right: 1.5em;
     }
     .color_linea_divisora_Card{
-        border-top: 1px solid rgba(0, 34, 48, 0.65);
+        border-top: 1px solid rgb(238, 238, 238);
     }
     .card-body{
         background-color: $color_azul_oscuro;
@@ -157,5 +158,85 @@ p, span, b {
     }
     .color_palabras{
         color: white;
+    }
+}
+
+.swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-slide {
+    background: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .tamaño_swiper_card{
+    width: 369px;
+    margin-right: 0px;
+  }
+  .swiper-pagination-bullet-active{
+    background: $color_azul_oscuro;
+  }
+  .boton_cards{
+    border-color: $color_dorado;
+    background-color: $color_azul_oscuro;
+    color: $color_dorado;
+  }
+  .boton_cards:hover{
+    background-color: $color_dorado;
+    color: white;
+  }
+  .contenedor_bot_card{
+    margin-left: 43%;
+    margin-top: -8%;
+  }
+  .letra_gruesa{
+    color:$color_azul_oscuro;
+    font-size: 48px;
+    font-weight: bold;
+  }
+  .main-title::before{
+    content: '';
+    position: absolute;
+    height: 3px;
+    width: 23%;
+    bottom: 79px;
+    background-color: #c8ae5c;
+    margin: auto;
+    
+}
+.main-title_destacadas::before{
+    content: '';
+    position: absolute;
+    height: 3px;
+    width: 30%;
+    background-color: #c8ae5c;
+    margin: auto;
+    margin-top: 33%;
+    
+}
+#servicios{
+    .cont_servi{
+        padding: 6%;
+    }
+    .cont_icono{
+    font-size: 226%;
+    padding: 9%;
+    }
+    .cont_arrendamiento{
+        margin: 17px;
+    }
+    .cont_ventas{
+        margin: 3%;
     }
 }
