--- a/css/style.css
+++ b/css/style.css
@@ -7849,9 +7849,187 @@ p, span, b {
   #servicios .color_blanco {
     color: white; }
   #servicios .color_fichas {
-    background-color: white; }
+    background-color: white;
+    -webkit-transform: scale(1, 1);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 250ms;
+    -moz-transform: scale(1, 1);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 250ms; }
+  #servicios .color_fichas:hover {
+    -webkit-transform: scale(1.12, 1.12);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 100ms;
+    -moz-transform: scale(1.12, 1.12);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 100ms; }
   #servicios .text_servi {
     font-weight: bold;
     color: #002230; }
+
+#asesores .letra_titulo {
+  color: #B58D10;
+  font-size: 48px;
+  font-weight: bold; }
+#asesores .color_titulo_Card {
+  color: #002230; }
+#asesores .color_parrafo {
+  color: #B58D10; }
+#asesores .card {
+  widows: 100%;
+  height: 100%;
+  transition: 1s;
+  border: 1px solid rgba(0, 0, 0, 0);
+  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.16), 0 0px 0px 0 rgba(0, 0, 0, 0.12); }
+  #asesores .card img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: all 400ms ease-in; }
+    #asesores .card img:hover {
+      transform: scale(1.1); }
+
+.espacio_margen {
+  margin-top: 5%; }
+
+.titulo {
+  color: #B58D10;
+  font-size: 48px;
+  font-weight: bold; }
+
+#aliados .titulo {
+  color: #002230;
+  font-size: 48px;
+  font-weight: bold; }
+#aliados img {
+  height: 100%;
+  object-fit: contain; }
+#aliados .margen_cont {
+  margin-top: 8%; }
+#aliados .margen_titulo {
+  margin-top: -2%; }
+#aliados .main-title::before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 23%;
+  background-color: #B58D10;
+  margin: auto;
+  margin-top: 15%; }
+
+#ultimas_noticias .letra_titulo {
+  color: #B58D10;
+  font-size: 48px;
+  font-weight: bold; }
+#ultimas_noticias hr {
+  width: 90%;
+  border-top: 1px solid #B58D10; }
+#ultimas_noticias .boton_ver_mas {
+  background-color: #002230;
+  color: white; }
+#ultimas_noticias .boton_ver_mas:hover {
+  background-color: white;
+  color: #002230; }
+
+#consignar {
+  position: relative;
+  z-index: 2;
+  margin-bottom: -3%; }
+  #consignar .container {
+    margin-top: 34px;
+    background-color: #f8f9fa;
+    padding: 2%; }
+  #consignar .color_btn {
+    background-color: #002230;
+    color: white; }
+  #consignar .color_btn:hover {
+    background-color: white;
+    color: #002230; }
+  #consignar h2 {
+    color: white; }
+  #consignar .color_fondo {
+    background-color: #B58D10; }
+
+#footer {
+  background-image: url(../images/footer.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #footer .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #footer .style_icono {
+    color: white;
+    display: block;
+    transition: all 0.35s ease-out;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    margin: auto;
+    text-align: center;
+    background: transparent;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 0%;
+    border: 1px solid #B58D10;
+    display: inline-block;
+    margin-right: 5px; }
+  #footer .style_icono:hover {
+    color: #B58D10; }
+  #footer .margen_iconos {
+    margin-top: -15%; }
+    #footer .margen_iconos a {
+      text-decoration: none; }
+  #footer .logo_footer {
+    margin-top: -7%;
+    width: 68%; }
+  #footer .margen_telefono {
+    margin-top: 11%; }
+  #footer .estylo_teelfonos {
+    list-style: none;
+    margin-bottom: 5%; }
+    #footer .estylo_teelfonos a {
+      text-decoration: none; }
+  #footer .div_info {
+    margin-top: -30%;
+    margin-bottom: 11%; }
+  #footer .top_mapa {
+    margin-top: 48px; }
+  #footer .tamaño_mapa {
+    height: 70%;
+    width: 100%; }
+  #footer .boton_como_llegar {
+    background-color: white;
+    color: #B58D10; }
+  #footer .boton_como_llegar:hover {
+    background-color: #B58D10;
+    color: white; }
+  #footer .color_info {
+    color: white; }
+  #footer i {
+    color: #B58D10; }
+  #footer i:hover {
+    color: white; }
+  #footer a {
+    color: white; }
+  #footer a:hover {
+    color: #B58D10; }
+  #footer .cont_contact {
+    text-align: center;
+    padding-left: 0%; }
+  #footer .copy_style {
+    color: white; }
+  #footer .color_a_foot_imper {
+    color: #0057A1;
+    text-decoration: none; }
 
 /*# sourceMappingURL=style.css.map */
