--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,6 @@
 @import 'colorInput';
 @import 'zanimacionCarousel';
 @import 'zinicio';
+@import 'zdetalle_asesor';
+@import 'zquienes_somos';
+@import 'zservicios';
