--- a/css/style.css
+++ b/css/style.css
@@ -8032,4 +8032,150 @@ p, span, b {
     color: #0057A1;
     text-decoration: none; }
 
+.subir {
+  display: none;
+  padding: 15px;
+  background-color: #002230;
+  color: white;
+  font-size: 12px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  box-shadow: -1px 1px 5px 1px #B58D10;
+  z-index: 2; }
+
+#detalle_asesor {
+  padding: 10%; }
+  #detalle_asesor .style_titulo {
+    color: #002230;
+    font-weight: bold; }
+  #detalle_asesor ul li span {
+    display: inline-block;
+    color: #002230; }
+  #detalle_asesor li {
+    margin-bottom: 10px;
+    font-weight: 500;
+    list-style: none; }
+  #detalle_asesor .info_espacio {
+    margin-right: 5%; }
+  #detalle_asesor .alineacion_izq {
+    text-align: right; }
+  #detalle_asesor .card {
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0), 0 0px 0px 0 rgba(0, 0, 0, 0.12);
+    border: 0px solid rgba(0, 0, 0, 0.125); }
+  #detalle_asesor .card-body {
+    padding: 0.25rem; }
+  #detalle_asesor .linea_decoracion {
+    background: #002230;
+    margin-top: 12px;
+    padding: 5%; }
+  #detalle_asesor .color_btn {
+    background-color: white;
+    color: #0057A1; }
+  #detalle_asesor .color_btn:hover {
+    background-color: #0057A1;
+    color: white; }
+
+#contact {
+  background-image: url(../images/Contacto.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #contact .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #contact .titulo {
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 32px;
+    color: #fff;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 10%; }
+
+#texto_contacto {
+  margin-top: -2%; }
+  #texto_contacto .titulo_cont {
+    margin-top: -5%; }
+
+#banner_contador {
+  background: url(../images/aseguradoras.jpg);
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 5%; }
+  #banner_contador h5 {
+    color: white; }
+  #banner_contador h1 {
+    color: #B58D10; }
+
+#slider_mision_vision h5 {
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 1px; }
+#slider_mision_vision p {
+  color: black; }
+#slider_mision_vision .color {
+  color: black;
+  font-size: 253%; }
+#slider_mision_vision .cont_top {
+  margin-bottom: 10%;
+  color: #B58D10; }
+#slider_mision_vision .cont_top_valores {
+  margin-bottom: 6%; }
+#slider_mision_vision h2 {
+  margin-bottom: 5%; }
+#slider_mision_vision .color_titulo {
+  color: #B58D10; }
+#slider_mision_vision .color_titulo_valores {
+  color: #002230; }
+
+#arrendamientos {
+  background-image: url(../images/Gerencia\ comercial.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #arrendamientos .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #arrendamientos .titulo {
+    color: #e9ecef;
+    font-size: 48px;
+    font-weight: bold;
+    padding: 2%; }
+  #arrendamientos .color_servicio {
+    margin-top: -5%; }
+
+#contenido_arrendamientos {
+  padding: 7%; }
+  #contenido_arrendamientos .color_servicio {
+    color: #002230;
+    font-size: 48px;
+    font-weight: bold; }
+  #contenido_arrendamientos .lista {
+    text-align: left;
+    list-style: none;
+    margin-top: 3%; }
+
 /*# sourceMappingURL=style.css.map */
