adelanto de proyecto
Se terminaron todas las vistas excepto el menu

--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -339,6 +339,11 @@ p, span, b {
     font-size: 48px;
     font-weight: bold;
 }
+.titulo_Servi{
+    color: $color_dorado;
+    font-size: 48px;
+    font-weight: bold;
+}
 #aseguradoras{
     
    .margen_top{
