--- a/scss/_zquienes_somos.scss
+++ b/scss/_zquienes_somos.scss
@@ -1,5 +1,5 @@
 #contact{
-    background-image: url(../images/Contacto.jpg);
+    background-image: url(../images/Quienes\ somos.jpg);
     margin: 0px;
     background-position: center center;
     background-size: cover;
