--- a/css/style.css
+++ b/css/style.css
@@ -7897,6 +7897,11 @@ p, span, b {
   font-size: 48px;
   font-weight: bold; }
 
+.titulo_Servi {
+  color: #B58D10;
+  font-size: 48px;
+  font-weight: bold; }
+
 #aliados .titulo {
   color: #002230;
   font-size: 48px;
@@ -8078,7 +8083,7 @@ p, span, b {
     color: white; }
 
 #contact {
-  background-image: url(../images/Contacto.jpg);
+  background-image: url(../images/Quienes\ somos.jpg);
   margin: 0px;
   background-position: center center;
   background-size: cover;
@@ -8159,13 +8164,14 @@ p, span, b {
     left: 0;
     right: 0;
     background-color: #101734ab; }
-  #arrendamientos .titulo {
-    color: #e9ecef;
-    font-size: 48px;
-    font-weight: bold;
-    padding: 2%; }
   #arrendamientos .color_servicio {
     margin-top: -5%; }
+
+.titulo {
+  color: #e9ecef;
+  font-size: 48px;
+  font-weight: bold;
+  padding: 2%; }
 
 #contenido_arrendamientos {
   padding: 7%; }
@@ -8177,5 +8183,376 @@ p, span, b {
     text-align: left;
     list-style: none;
     margin-top: 3%; }
+
+#ventas {
+  background-image: url(../images/Gerencia\ comercial.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #ventas .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+
+#administracion {
+  background-image: url(../images/administración\ de\ inmuebles.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #administracion .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+
+#symil {
+  background-image: url(../images/SAMYL.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #symil .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+
+#symil2 {
+  padding: 6%; }
+
+.posicion_servi {
+  margin-top: -25%; }
+
+.parrafo_Servi {
+  margin-top: -12%; }
+
+.parrafo {
+  margin-top: -37%; }
+
+.icono {
+  width: 106%;
+  object-fit: none; }
+
+#corretaje {
+  background-image: url(../images/corretaje.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #corretaje .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+
+#Gerencia_Comercial {
+  background-image: url(../images/Gerencia\ comercial.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #Gerencia_Comercial .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+
+#inmuebles {
+  background-image: url(../images/propiedades.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #inmuebles .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #inmuebles .titulo {
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 32px;
+    color: #fff;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 10%; }
+
+#buscador_inmuebles .linea_decoracion {
+  background: #002230;
+  margin-top: 12px;
+  padding: 4%;
+  color: white; }
+#buscador_inmuebles .tamaño_letra {
+  font-size: 19px; }
+#buscador_inmuebles .precio_inmueble {
+  position: absolute;
+  top: 178px;
+  font-size: 9px;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 1.5px;
+  background-color: rgba(181, 141, 16, 0.66);
+  padding: 16px 45px 11px 45px;
+  margin-left: 0%; }
+#buscador_inmuebles .gestion_inmueble {
+  position: absolute;
+  top: 0px;
+  font-size: 9px;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 1.5px;
+  background-color: rgba(181, 141, 16, 0.66);
+  padding: 12px 41px 11px 45px;
+  margin-left: 40%; }
+#buscador_inmuebles .card-body {
+  background-color: #002230; }
+#buscador_inmuebles .dorado {
+  color: #B58D10; }
+#buscador_inmuebles .color_palabras {
+  color: white; }
+#buscador_inmuebles .color_linea_divisora_Card {
+  border-top: 1px solid #eeeeee; }
+#buscador_inmuebles .info_inmueble {
+  display: flex;
+  list-style: none;
+  margin-left: -6%;
+  margin-right: -10%; }
+
+#contacto .caja {
+  padding-top: 7px;
+  padding-bottom: 5px;
+  -webkit-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
+  width: 486px;
+  position: relative;
+  margin: auto; }
+  #contacto .caja img {
+    object-fit: cover; }
+#contacto .caja_texto {
+  padding: 6%;
+  margin-top: -6%; }
+#contacto .div_condiciones {
+  padding: 7%;
+  margin-top: -10%; }
+#contacto .color_a_condiciones {
+  color: #0057A1; }
+  #contacto .color_a_condiciones:hover {
+    color: #B58D10; }
+#contacto .texto_compartir {
+  margin-top: 19px;
+  margin-left: -10%; }
+#contacto .color_comparit {
+  background-color: #002230; }
+  #contacto .color_comparit:hover {
+    background-color: #0057A1; }
+  #contacto .color_comparit .color_blanco_url {
+    color: white; }
+#contacto .icon_foot {
+  font-size: 23px;
+  padding: 0px; }
+#contacto .container_icon_compartir {
+  margin-left: 2%;
+  margin-top: 2%;
+  padding: 0px; }
+#contacto .margen_iconos {
+  margin-top: 15px; }
+  #contacto .margen_iconos a {
+    color: #0057A1; }
+    #contacto .margen_iconos a:hover {
+      color: #B58D10; }
+#contacto .property-single-detail-title {
+  border-bottom: 1px solid #cdcdcd;
+  padding-bottom: 11px;
+  margin-bottom: 30px; }
+#contacto .propiedades_similares {
+  padding: 15px;
+  font-weight: bold;
+  font-size: 20px;
+  color: #B58D10;
+  text-transform: uppercase;
+  margin-bottom: 0; }
+#contacto .property {
+  margin-bottom: 10px;
+  overflow: hidden;
+  position: relative;
+  width: 100%; }
+#contacto .alto_img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
+#cont_margen_total {
+  margin-top: 5%; }
+
+#contactanos {
+  background-image: url(../images/Contacto.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #contactanos .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #contactanos .titulo {
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 32px;
+    color: #fff;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 10%; }
+  #contactanos .info_color {
+    color: #002230; }
+
+.info_color {
+  color: #002230; }
+  .info_color .fas {
+    color: #B58D10; }
+  .info_color .far {
+    color: #B58D10; }
+  .info_color .fab {
+    color: #B58D10; }
+
+.lista_contacto {
+  list-style: none;
+  margin-top: 9%; }
+  .lista_contacto li {
+    margin-bottom: 5%; }
+
+.cont_formulario {
+  margin-top: 4%; }
+
+.text_Area {
+  padding-right: 30px; }
+
+.color_a_contacto {
+  color: #0057A1; }
+  .color_a_contacto:hover {
+    color: #B58D10; }
+
+.color_boton_contacto {
+  background-color: #002230;
+  color: white; }
+  .color_boton_contacto:hover {
+    background-color: #B58D10;
+    color: #B58D10; }
+
+.letra_titulo_contac {
+  color: #002230;
+  font-size: 40px;
+  font-weight: bold; }
+
+.main-title_contac::before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 23%;
+  background-color: #B58D10;
+  margin: auto;
+  margin-top: 10%; }
+
+#mapa_contacto .contenedor_mapa {
+  position: relative;
+  height: 314px;
+  margin-bottom: 2%; }
+#mapa_contacto .tamaño_mapa {
+  min-width: 103%;
+  object-fit: contain;
+  height: 100%; }
+
+#blog {
+  background-image: url(../images/proyectos\ nuevos.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #blog .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #blog .titulo {
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 32px;
+    color: #fff;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 10%; }
+
+.imagen_card {
+  object-fit: cover;
+  width: 100%;
+  height: 255px; }
+
+.margen_blog {
+  margin-top: 5%;
+  margin-bottom: 5%; }
+
+.card-text_blog {
+  border-bottom: 1px dashed #B58D10;
+  margin-bottom: 30px;
+  padding-bottom: 30px; }
+
+.boton_blog {
+  background-color: #002230;
+  color: white; }
+  .boton_blog:hover {
+    background-color: white;
+    color: #002230; }
 
 /*# sourceMappingURL=style.css.map */
