--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,7 @@
 @import 'zdetalle_asesor';
 @import 'zquienes_somos';
 @import 'zservicios';
+@import 'zinmuebles';
+@import 'zdetalle_inmueble';
+@import 'zcontacto';
+@import 'zblog';
