--- a/scss/_zservicios.scss
+++ b/scss/_zservicios.scss
@@ -16,6 +16,18 @@
         right: 0;
         background-color: #101734ab;
     }
+    .boton{
+        padding: .84rem 2.14rem;
+    font-size: .81rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: .375rem;
+    border: 0;
+    border-radius: .125rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    word-wrap: break-word;
+    }
     
     .color_servicio{
         margin-top: -5%;
@@ -27,6 +39,7 @@ font-size: 48px;
 font-weight: bold;
 padding: 2%;
 }
+
 #contenido_arrendamientos{
     padding: 7%;
     .color_servicio{
@@ -38,6 +51,18 @@ padding: 2%;
         text-align: left;
         list-style: none;
         margin-top: 3%;
+    }
+    .boton{
+        padding: .84rem 2.14rem;
+    font-size: .81rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: .375rem;
+    border: 0;
+    border-radius: .125rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    word-wrap: break-word;
     }
 }
 #ventas{
@@ -77,6 +102,18 @@ padding: 2%;
         right: 0;
         background-color: #101734ab;
     }
+    .boton{
+        padding: .84rem 2.14rem;
+    font-size: .81rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: .375rem;
+    border: 0;
+    border-radius: .125rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    word-wrap: break-word;
+    }
 }
 #symil{
     background-image: url(../images/SAMYL.jpg);
@@ -95,6 +132,18 @@ padding: 2%;
         left: 0;
         right: 0;
         background-color: #101734ab;
+    }
+    .boton{
+        padding: .84rem 2.14rem;
+    font-size: .81rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: .375rem;
+    border: 0;
+    border-radius: .125rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    word-wrap: break-word;
     }
     
 }
@@ -135,6 +184,18 @@ padding: 2%;
             right: 0;
             background-color: #101734ab;
         }
+        .boton{
+            padding: .84rem 2.14rem;
+        font-size: .81rem;
+        transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        margin: .375rem;
+        border: 0;
+        border-radius: .125rem;
+        cursor: pointer;
+        text-transform: uppercase;
+        white-space: normal;
+        word-wrap: break-word;
+        }
         
     }
     #Gerencia_Comercial{
@@ -154,5 +215,17 @@ padding: 2%;
             left: 0;
             right: 0;
             background-color: #101734ab;
+        }
+        .boton{
+            padding: .84rem 2.14rem;
+        font-size: .81rem;
+        transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        margin: .375rem;
+        border: 0;
+        border-radius: .125rem;
+        cursor: pointer;
+        text-transform: uppercase;
+        white-space: normal;
+        word-wrap: break-word;
         }
     }
