--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -10,7 +10,7 @@ body{
         overflow-x:hidden;
         padding: 0;
         margin: 0;
-        padding-left: 3%;
+        padding-left: 70px;
         
     }
 
@@ -95,7 +95,7 @@ p, span, b {
     text-decoration:none;
 }
 .logo{
-     width: 34%;
+     width: 44%;
     height: 0%;
     margin-top: -7%;
     padding: 1%
@@ -527,11 +527,69 @@ p, span, b {
     }
 
 }
+.margen.contacto{
+        margin-right: 8%;    
+
+}
 
 .contenedor_footer{
     margin-left: 3%;
 }
 
+.dropbtn {
+	background-color: #fff;
+	color: #000;
+	padding: 4px 0;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+	transition: 0.5s all ease;
+  }
+  
+  .dropdown {
+	position: relative;
+	display: inline-block;
+	width: 100%;
+  }
+  
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #c6a062;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	width:100%;
+	left:0;
+  }
+  
+.dropdown-content a {
+    color: black;
+    padding: 10px 22px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a{
+	width:100%;
+}
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+	display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #c6a062;
+    color: #fff;
+}
+.dropdown-content a:hover {
+    color: #fff;
+    background-color: #c6a062;
+    padding: 10px 22px;
+    line-height: 35px !important;
+    transition: 0.5s all ease;
+}
 
 
 .subir {
