--- a/scss/_zblog.scss
+++ b/scss/_zblog.scss
@@ -1,5 +1,5 @@
 #blog{
-    background-image: url(../images/proyectos\ nuevos.jpg);
+    background-image: url(../images/proyectos_nuevos.jpg);
     margin: 0px;
     background-position: center center;
     background-size: cover;
@@ -25,6 +25,22 @@
     text-align: center;
     margin-bottom: 10%;
     }
+    .boton{
+        padding: .84rem 2.14rem;
+    font-size: .81rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: .375rem;
+    border: 0;
+    border-radius: .125rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    word-wrap: break-word;
+    }
+    
+}
+.tit{
+    font-family: "roboto";
     
 }
 
